[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mass-pkdv"
version = "0.1.0"
description = "Product Kernel Density Visualization based on MASS"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["mass_pkdv"]

[tool.setuptools.package-data]
mass_pkdv = ["bin/*.exe"]
